Make minor documentation spelling corrections

--- a/docs/02. About jsonpatch.js.md
+++ b/docs/02. About jsonpatch.js.md
@@ -15,7 +15,7 @@ Example
     patcheddoc = jsonpatch.apply_patch(mydoc, thepatch);
     // patcheddoc now equals {"baz": "boo", "foo": "bar"}}
 
-And that's all you need for basic use, if the patch is invalid or won't apply then you'll get an error thrown. The original docucment is NOT mutated so you can use it for other things afterwards.
+And that's all you need for basic use, if the patch is invalid or won't apply then you'll get an error thrown. The original document is NOT mutated so you can use it for other things afterwards.
 
 Where can jsonpatch.js be used?
 -------------------------------
