--- a/docs/09. add.md
+++ b/docs/09. add.md
@@ -6,7 +6,7 @@ heading: "add(document, value)"
 Takes a JSON document and a value and adds the value into
 the doc at the position pointed to. If the position pointed to is
 in an array then the existing element at that position (if any)
-and all that follow it have there position incremented to make
+and all that follow it have their position incremented to make
 room. It is an error to add to a parent object that doesn't exist
 or to try to replace an existing value in an object.
 
